# AM

./: Algmuz.cabal  README.md  stack.yaml
src/: Algmuz.hs  Main.hs
