name:                Algmuz
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Algmuz#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.m
                     
Library
  hs-source-dirs:      src
  exposed-modules:     Algmuz
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Euterpea
                     , random
                     , comonad
                     , lens
                     , type-iso

Executable Main
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5
                  , Euterpea
                  , random
                  , comonad
                  , lens
                  , type-iso
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:    Algmuz
